# ThumbySNES

./: .gitignore  CMakeLists.txt  PERF.md  PLAN.md  README.md  STATUS.md
device/: CMakeLists.txt  snes_audio_pwm.c  snes_audio_pwm.h  snes_battery.c  snes_battery.h  snes_buttons.c  snes_buttons.h  snes_device_main.c  snes_flash_disk.c  snes_flash_disk.h  snes_font.c  snes_font.h  snes_lcd_gc9107.c  snes_lcd_gc9107.h  snes_menu.c  snes_menu.h  snes_msc.c  snes_picker.c  snes_picker.h  snes_run.c  snes_run.h  snes_thumb.c  snes_thumb.h  snes_xip.c  snes_xip.h  thumby_state_bridge.c  thumby_state_bridge.h  tusb_config.h  usb_descriptors.c
device/fatfs/: diskio.c  ffconf.h
firmware/: snesrun_device.uf2
src/: cpu_asm.c  cpu_asm.h  cpu_asm_groupA.inc  cpu_asm_groupB.inc  cpu_asm_groupC.inc  cpu_asm_groupD.inc  cpu_asm_groupE.inc  cpu_asm_jumptable.inc  cpu_asm_jumptable_final.inc  cpu_fast.c  cpu_fast.h  cpu_fast_test.c  ppu_emit_asm.h  snes_bench_main.c  snes_core.c  snes_core.h  snes_host_main.c  snes_memaudit_main.c
tools/: gen_cpu_dispatch.py  gen_gfx_zero.c  gen_test_rom.py  memaudit.md
